--- a/src/main/webapp/app/entities/transaction/transaction-dialog.html
+++ b/src/main/webapp/app/entities/transaction/transaction-dialog.html
@@ -72,7 +72,7 @@
 
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()" ui-sref="{{ vm.previousState }}">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
         </button>
         <button type="submit" ng-disabled="editForm.$invalid || vm.isSaving" class="btn btn-primary">
