--- a/src/main/webapp/app/entities/transaction/transaction-detail.html
+++ b/src/main/webapp/app/entities/transaction/transaction-detail.html
@@ -46,12 +46,10 @@
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
     </button>
 
-    <button type="button"
-            ui-sref="transaction-detail.edit({id:vm.transaction.id})"
-            class="btn btn-primary">
+    <a class="btn btn-primary" target="_blank" ng-href="{{vm.url}}">
         <span class="glyphicon glyphicon-book"></span>
         <span class="hidden-xs hidden-sm"> Read book</span>
-    </button>
+    </a>
 
     <button type="button"
             ui-sref="transaction-detail.edit({id:vm.transaction.id})"
@@ -62,3 +60,4 @@
     </button>
 </div>
 <div class="clear-block"></div>
+
